--- a/pom.xml
+++ b/pom.xml
@@ -95,11 +95,19 @@
     <version>3.0</version>
     <scope>test</scope>
 </dependency>
+
 	<!-- Extent Reports-->
 	<dependency>
     <groupId>tech.grasshopper</groupId>
     <artifactId>extentreports-cucumber7-adapter</artifactId>
     <version>1.9.0</version> <!-- use latest version if possible -->
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-ooxml</artifactId>
+    <version>5.4.1</version>
 </dependency>
 
 <!-- To ignore slf4j error-->
