--- a/pom.xml
+++ b/pom.xml
@@ -116,7 +116,12 @@
     <artifactId>slf4j-simple</artifactId>
     <version>2.0.13</version> <!-- or latest -->
 </dependency>
-	
+
+  	<dependency>
+  		<groupId>Automation_framework</groupId>
+  		<artifactId>selenium_framework</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
   </dependencies>
   
   
